--- a/client/public/index.html
+++ b/client/public/index.html
@@ -23,6 +23,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <link href="https://fonts.googleapis.com/css2?family=Reenie+Beanie&display=swap" rel="stylesheet">
+    <script src="https://apis.google.com/js/api.js" type="text/javascript"></script>
   <title>LiveWires AgendaXProductivityApp</title>
 </head>
 
